[package]
name = "pipe_traits"
version = "1.0.0"
authors = ["jadon belezos <jjbelezos@gmail.com>"]
description="a bunch of traits that makes composing functions together"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/warlord500/pipe_traits_rust"
categories = ["gui"]


